# jpeg_proxy

./: Cargo.toml  Dockerfile  build.bat
.cargo/: config.toml
.github/workflows/: publish-docker-image-action.yml
debug/: jpeg_test.py
src/: jpeg.rs  main.rs  res.rs
src/commande/: mod.rs
src/http/: mod.rs  stream.rs  websocket.rs
src/jpeg/: mod.rs
src/telemetrie/: actuator.rs  mod.rs  sensors.rs
test/: wss_debug.html
testing/: jpeg_test.py
