[package]
name = "video_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
axum = { version = "0.7.4", features = ["ws"] }
futures-core = "0.3"
bincode = "2.0.0-rc.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
rand = "0.5.0"
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures-util = "0.3"
